# libunr-editor

./: .gitignore  CMakeLists.txt  README.md  configure  libunr-editor  libunr-editor.vcxproj  libunr-editor.vcxproj.filters  todo.txt
cmake/Modules/: FindLibunr.cmake  FindMpg123.cmake  FindUuid.cmake
include/: Browser.h  Browsers.h  ClassBrowser.h  Components.h  Components.inc  EdBrowsers.h  EdConfigFrame.h  EdEditor.h  EdGamePrompt.h  EdMain.h  EdStrings.h  EdToolFrame.h  EditorMain.h  LevelBrowser.h  MeshBrowser.h  MusicBrowser.h  ObjectViewer.h  PackageBrowser.h  SoundBrowser.h  TextureBrowser.h  libunr-editor.h
include/private/: libunr-editor.h
res/: Makefile.template
res/bitmap/: ActorBrowser.png~  AudioBrowser.png~  ClassBrowser.png~  GraphicsBrowser.png~  MeshBrowser.png~  Misc.png~  New.png~  Open.png~  PackageBrowser.png~  Save.png~
src/: Browser.cpp  Browsers.cpp  ClassBrowser.cpp  Components.cpp  EdBrowser.cpp  EdClassBrowser.cpp  EdConfigFrame.cpp  EdEditor.cpp  EdGamePrompt.cpp  EdMain.cpp  EdMasterBrowser.cpp  EdObjectBrowser.cpp  EdPackageBrowser.cpp  EdToolFrame.cpp  EditorMain.cpp  LevelBrowser.cpp  MeshBrowser.cpp  MusicBrowser.cpp  ObjectViewer.cpp  PackageBrowser.cpp  SoundBrowser.cpp  TextureBrowser.cpp  libunr-editor.cpp
